--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,16 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
+  color: var(--color-scheme);
   text-decoration: inherit;
 }
 a:hover {
