style: add theme context

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -70,7 +70,7 @@ body {
     --card-foreground: #fafafa;
     --popover: #0a0a0a;
     --popover-foreground: #fafafa;
-    --primary: #0a0a0a; /* Example hex color */
+    --primary: #0a0a0a;
     --primary-foreground: #0a0a0a;
     --secondary: #262626;
     --secondary-foreground: #fafafa;
